--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <div class="contanier"> 
     <h1>To do list </h1>
     <div id="inner">
-    <input type="checkbox">
+      <input type="checkbox" class="check">
      <input type="text" placeholder="write your text here" class="inpu1">
     
      <button class="btn" onclick="add()">Add</button> 
