modified the delete button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
      <input type="text" placeholder="write your text here" class="inpu1">
     
      <button class="btn" onclick="add()">Add</button> 
+     <input value='Delete' type='button' class='btn2' onclick="remove('inputId')">
      
      <div class="place"> 
  
